Prevent layout shift on project page

--- a/frontend/styles/pages/_project.scss
+++ b/frontend/styles/pages/_project.scss
@@ -3,12 +3,13 @@
 
 	.project-wrapper {
 		display: grid;
-		grid-template-columns: 480px 1fr;
+		grid-template-columns: 480px 500px;
 		grid-gap: 20px;
 		margin-top: 50px;
 
-		@media screen and (max-width: $screen-md) {
+		@media screen and (max-width: 1100px) {
 			grid-template-columns: 1fr;
+			max-width: 600px;;
 		}
 	}
 }
@@ -31,4 +32,8 @@
 
 .project-image img {
 	border-radius: 5px;
+
+	@media screen and (max-width: 1100px) {
+		margin: auto;
+	}
 }
